# nihtest

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile.maintainer  NEWS.md  README.md  THANKS  TODO.md  pylintrc  pyproject.toml  setup.cfg
.github/workflows/: build.yml
man/: nihtest-case.man  nihtest-case.mdoc  nihtest.conf.html  nihtest.conf.mdoc  nihtest.html  update-html.cmake
manpages/: CMakeLists.txt  Makefile  nihtest-case.html  nihtest-case.man  nihtest-case.mdoc  nihtest-config.html  nihtest.conf.html  nihtest.conf.man  nihtest.conf.mdoc  nihtest.html  nihtest.man  nihtest.mdoc
nihtest/: Command.py  CompareArrays.py  Configuration.py  Directory.py  Environment.py  Features.py  File.py  Output.py  Sandbox.py  Suite.py  Test.py  TestCase.py  Utility.py  __main__.py  main.py
regress/: CMakeLists.txt  cat.c  config.h  diff-1.test  diff-2.input  diff-2.test  false-fail.test  false-pass.input  false-pass.test  features-pass.input  features-skip.input  features-skip.test  file-del-fail.input  file-del-pass.test  file-fail.test  file-new-fail.test  file-new-pass.test  file-pass.test  file-subdirectory-pass.test  parameter-tests-1.input  parameter-tests-1.test  parameter-tests-3.input  parameter-tests-4.input  precheck-skip.test  stderr-pass.test  stderr-replace-pass.test  stdin-pass.test  stdout-pass.test  true-pass.test  true.c
tests/: CMakeLists.txt  argument-escaped.input  argument-escaped.test  binary-1  binary-2  can-preload.c  cat.c  comparator-fail.input  comparator-fail.test  comparator-pass.input  comparator-pass.test  comparator-preprocess.input  comparator-preprocess.test  comparator.c  compare-binary-fail.input  compare-binary-fail.test  compare-binary-pass.input  compare-binary-pass.test  copier.input  copier.test  default-stderr-replace.input  default-stderr-replace.test  delete.c  delete.h  description-pass.test  diff-1.input  diff-1.test  diff-2.test  directory-duplicate.input  directory-duplicate.test  directory-missing.input  directory-missing.test  directory-unexpected.input  directory-unexpected.test  echo.c  empty-dir.input  empty-dir.test  empty-lines.txt  environment-clear-pass.input  environment-clear-pass.test  (+93 more)
