[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nihtest"
version = "0.1"
authors = [
    { name="Dieter Baron", email="dillo@nih.at" },
    { name="Thomas Klausner", email="wiz@gatalith.at"}
]
description = "A testing tool for command line utilities."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nih-at/nihtest"
"Bug Tracker" = "https://github.com/nih-at/nihtest/issues"

[project.scripts]
nihtest = "nihtest.main:main_cli"
