[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nihtest"
version = "1.7.0"
authors = [
    { name="Dieter Baron", email="dillo@nih.at" },
    { name="Thomas Klausner", email="wiz@gatalith.at"}
]
description = "A testing tool for command line utilities."
license = {text = "BSD-3-Clause"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-dateutil"
]

[project.urls]
"Homepage" = "https://github.com/nih-at/nihtest"
"Bug Tracker" = "https://github.com/nih-at/nihtest/issues"

[project.scripts]
nihtest = "nihtest.__main__:main"

[tool.bumpver]
current_version = "1.7.0"
version_pattern = "MAJOR.MINOR.PATCH"

[tool.bumpver.file_patterns]
"nihtest/__main__.py" = [
    'VERSION = "{version}"'
]
"pyproject.toml" = [
    'version = "{version}"'
]
"CMakeLists.txt" = [
    "VERSION {version}"
]
